--- a/projectile-sampling-distributions_en.html
+++ b/projectile-sampling-distributions_en.html
@@ -23,7 +23,7 @@
   window.phet.chipper.packageObject =
     {
       "name": "projectile-sampling-distributions",
-      "version": "1.1.0-dev.0",
+      "version": "1.1.0-dev.1",
       "license": "GPL-3.0",
       "repository": {
         "type": "git",
@@ -55,7 +55,8 @@
         ],
         "phet-io": {
           "compareDesignedAPIChanges": true
-        }
+        },
+        "published": true
       },
       "eslintConfig": {
         "extends": "../chipper/eslint/sim_eslintrc.js",
