minor bug fixes.  https://github.com/phetsims/density-buoyancy-common/issues/157
Signed-off-by: Michael Kauzmann <michael.kauzmann@colorado.edu>

--- a/projectile-sampling-distributions_en.html
+++ b/projectile-sampling-distributions_en.html
@@ -51,10 +51,13 @@
           "supportsSound": true
         },
         "screenNameKeys": [
-          "PROJECTILE_SAMPLING_DISTRIBUTIONS/screen.sampling"
+          "PROJECTILE_DATA_LAB/screen.sampling"
         ],
         "phet-io": {
-          "compareDesignedAPIChanges": true
+          "compareDesignedAPIChanges": true,
+          "wrappers": [
+            "phet-io-sim-specific/repos/projectile-sampling-distributions/wrappers/codap"
+          ]
         },
         "published": true
       },
