grunt update, see https://github.com/phetsims/chipper/issues/1474

--- a/projectile-sampling-distributions_en.html
+++ b/projectile-sampling-distributions_en.html
@@ -42,7 +42,8 @@
           "phet-io"
         ],
         "phetLibs": [
-          "projectile-data-lab"
+          "projectile-data-lab",
+          "bamboo"
         ],
         "supportsOutputJS": true,
         "simFeatures": {
@@ -60,39 +61,14 @@
           ]
         },
         "published": true
-      },
-      "eslintConfig": {
-        "extends": "../chipper/eslint/sim_eslintrc.js",
-        "overrides": [
-          {
-            "files": [
-              "**/*.ts"
-            ],
-            "rules": {
-              "@typescript-eslint/ban-ts-comment": [
-                "error",
-                {
-                  "ts-expect-error": true,
-                  "ts-ignore": true,
-                  "ts-check": true,
-                  "ts-nocheck": true
-                }
-              ],
-              "additional-bad-text": [
-                "error",
-                {
-                  "forbiddenTextObjects": [
-                    "dispose"
-                  ]
-                }
-              ]
-            }
-          }
-        ]
       }
     };
   window.phet.chipper.stringRepos =
     [
+      {
+        "repo": "bamboo",
+        "requirejsNamespace": "BAMBOO"
+      },
       {
         "repo": "joist",
         "requirejsNamespace": "JOIST"
