--- a/projectile-sampling-distributions_en.html
+++ b/projectile-sampling-distributions_en.html
@@ -56,6 +56,7 @@
         ],
         "phet-io": {
           "compareDesignedAPIChanges": true,
+          "fuzzValuesOverride": false,
           "wrappers": [
             "phet-io-sim-specific/repos/projectile-sampling-distributions/wrappers/codap"
           ]
